--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Copy to .env and fill with your real values, then: set -a; source .env; set +a
-WEATHERAPI_KEY=your_weatherapi_key_here
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
-TELEGRAM_CHAT_ID=your_chat_id_here
+WEATHERAPI_KEY="your_weatherapi_key_here"
+TELEGRAM_BOT_TOKEN="your_telegram_bot_token_here"
+TELEGRAM_CHAT_ID="your_chat_id_here"
